source/components/accordion.scss
// ACCORDION
// -----------------------------------------------------------------------------

@use "../settings" as *;
@use "../helpers/focus-visible" as *;

.accordion {
  &-segment {
    border-top: $border-width-standard solid $color-neutral-light-c;

    &:last-child {
      border-bottom: $border-width-standard solid $color-neutral-light-c;
    }
  }

  &-slat {
    display: flex;
    align-items: center;
    width: 100%;
    padding: $space-small-a 0;
    border: 0;
    margin-top: -$border-width-standard;
    font-size: $font-size-large-e;
    line-height: $line-height-small-a;
    color: $color-neutral-dark-a;
    background-color: transparent;
    transition: color $transition-standard, outline $transition-standard;

    @at-root .accordion-segment:last-child & {
      margin-bottom: -$border-width-standard;
    }

    &:hover {
      color: $color-brand-dark-a;
    }

    &:focus-visible {
      @include focus-visible(rounded);
    }
  }

  &-icon-toggle {
    width: 1rem;
    height: 1rem;
    margin-left: auto;
    fill: currentColor;
    transition: transform $transition-standard;

    @at-root .accordion-slat.is-activated & {
      transform: rotate(180deg);
    }
  }

  &-panel {
    display: none;
    transition: height $transition-standard;

    &.is-shown,
    &.is-phasing {
      display: block;
    }
  }

  &-panel-inner {
    padding-top: $space-small-e;
    padding-bottom: $space-standard;

    @at-root .accordion-segment:last-child & {
      padding-top: calc(#{$space-small-e} + #{$border-width-standard});
      padding-bottom: calc(#{$space-standard} - #{$border-width-standard});
    }
  }
}

